[package]
name = "s_mmpbsa"
version = "0.6.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "^1.6.0"
toml = "^0.5.2"
ndarray = { version = "^0.15.6", features = ["rayon", "serde"] }
indicatif = "^0.17.1"
chrono = "0.4.19"
lazy_static = "1.4.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9"
serde-pickle = "1.1.1"
rayon = "1.7.0"
plotpy = "1.7.1"